<resources>
    <string name="app_name" translatable="false">MotoQuiz</string>
    <string name="check_knowledge">Check your knowledge about cars</string>
    <string name="play_button">Play</string>
    <string name="about_button" translatable="false">About</string>
    <string name="next_button">Next</string>
    <string name="category_play">Play</string>
    <string name="category_about" translatable="false">About</string>
    <string name="question_first">1. Which brands are owned by Volkswagen Group?</string>
    <string name="your_score_is">Your score is:</string>
    <string name="rules_button">Rules</string>
    <string name="category_rules">Rules</string>
    <string name="choose_category">Choose category</string>
    <string name="choose_format">Choose format</string>
    <string name="limited_time_button">Limited time</string>
    <string name="limited_time_explanation">
        &#x2022; 10 seconds to answer each question
        \n\n&#x2022; Correct answer grants amount of points equal to seconds left
        \n\n&#x2022; You can get up to 10 points for each answer
        \n\n&#x2022; There are only closed questions of single choice.</string>
    <string name="standard_explanation">
        &#x2022; Unlimited amount of time for answer
        \n\n&#x2022; Correct answer grants 1 point
        \n\n&#x2022; Closed questions of single and multiple choice
        \n\n&#x2022; Open questions as well
        \n\n&#x2022; From 1 to 4 answers can be correct
        \n\n&#x2022; Questions related to images</string>
    <string name="basic_button" translatable="false">Standard</string>
    <string name="seconds" translatable="false">10 s</string>
    <string name="racing_tracks_button">Racing Tracks</string>
    <string name="brands_button">Brands</string>
    <string name="definitios_button">Terminology</string>
    <string name="level_difficulty_hard">Difficulty: Hard</string>
    <string name="level_difficulty_medium">Medium difficulty</string>
    <string name="level_difficulty_easy">Difficulty: Easy</string>
    <string name="first_racing_tracks_question">1. Nurburgring Nordschleife is known as&#8230;</string>
    <string name="first_racing_tracks_answer1">Green Hell</string>
    <string name="first_racing_tracks_answer2">Nordschleife Paradise</string>
    <string name="first_racing_tracks_answer3">Track of 154 corners</string>
    <string name="first_racing_tracks_answer4">Porsches ground</string>
    <string name="second_racing_tracks_question">2. What is the name of the most famous polish track?</string>
    <string name="second_racing_tracks_answer1" translatable="false">Ułęż</string>
    <string name="second_racing_tracks_answer2" translatable="false">Tor Poznań</string>
    <string name="second_racing_tracks_answer3" translatable="false">Silesia Ring</string>
    <string name="second_racing_tracks_answer4" translatable="false">Tor Kielce</string>
    <string name="third_racing_tracks_question">3. Which track is host of 24 Hours of Le Mans?</string>
    <string name="third_racing_tracks_answer1" translatable="false">Circuit de Nevers Magny-Cours</string>
    <string name="third_racing_tracks_answer2" translatable="false">Circuit Gilles Villeneuve</string>
    <string name="third_racing_tracks_answer3" translatable="false">Circuit de Nevers Magny-Cours</string>
    <string name="third_racing_tracks_answer4" translatable="false">Circuit de la Sarthe</string>
    <string name="fourth_racing_tracks_question">4. What is the length of Nordschleife?</string>
    <string name="fourth_racing_tracks_answer1" translatable="false">20,6 km</string>
    <string name="fourth_racing_tracks_answer2" translatable="false">21,2 km</string>
    <string name="fourth_racing_tracks_answer3" translatable="false">20,8 km</string>
    <string name="fourth_racing_tracks_answer4" translatable="false">20,4 km</string>
    <string name="fifth_racing_tracks_question">5. Which is NOT Czech racing circuit?</string>
    <string name="fifth_racing_tracks_answer1" translatable="false">Automotodrom Brno</string>
    <string name="fifth_racing_tracks_answer2" translatable="false">Autodrom Most</string>
    <string name="fifth_racing_tracks_answer3" translatable="false">Autodrom Sosnova</string>
    <string name="fifth_racing_tracks_answer4" translatable="false">Autodrom Domodemovo</string>
    <string name="sixth_racing_tracks_question">6. Which production car is quickest at Nordschleife?</string>
    <string name="sixth_racing_tracks_answer1" translatable="false">Porsche 918 Spyder</string>
    <string name="sixth_racing_tracks_answer2" translatable="false">Radical SR8</string>
    <string name="sixth_racing_tracks_answer3" translatable="false">Mercedes-AMG GT R</string>
    <string name="sixth_racing_tracks_answer4" translatable="false">Lamborghini Huracan Performante</string>
    <string name="seventh_racing_tracks_question">7. What was longest circuit that held F1 Grand Prix?</string>
    <string name="seventh_racing_tracks_answer1" translatable="false">Pescara Circuit</string>
    <string name="seventh_racing_tracks_answer2" translatable="false">Nurburgring Nordschleife</string>
    <string name="seventh_racing_tracks_answer3" translatable="false">Sebring International Raceway</string>
    <string name="seventh_racing_tracks_answer4" translatable="false">AVUS</string>
    <string name="eighth_racing_tracks_question">8. Which track Ayrton Senna fatally crashed at?</string>
    <string name="eighth_racing_tracks_answer1" translatable="false">Nurburgring GP</string>
    <string name="eighth_racing_tracks_answer2" translatable="false">Circuit de Spa-Francorchamps</string>
    <string name="eighth_racing_tracks_answer3" translatable="false">Autodromo Internazionale Enzo e Dino Ferrari</string>
    <string name="eighth_racing_tracks_answer4" translatable="false">Silverstone Circuit</string>
    <string name="ninth_racing_tracks_question">9. Laguna Seca is associated with which brand?</string>
    <string name="ninth_racing_tracks_answer1" translatable="false">Toyota</string>
    <string name="ninth_racing_tracks_answer2" translatable="false">Honda</string>
    <string name="ninth_racing_tracks_answer3" translatable="false">Suzuki</string>
    <string name="ninth_racing_tracks_answer4" translatable="false">Mazda</string>
    <string name="tenth_racing_tracks_question">10. What was shortest circuit that held F1 Grand Prix?</string>
    <string name="tenth_racing_tracks_answer1" translatable="false">Circuit de Monaco</string>
    <string name="tenth_racing_tracks_answer2" translatable="false">Zeltweg Airfield</string>
    <string name="tenth_racing_tracks_answer3" translatable="false">Brands Hatch</string>
    <string name="tenth_racing_tracks_answer4" translatable="false">Fuji Speedway</string>
    <string name="high_score_at_the_end">You did aweesome job! You deserve at least a Ferrari!</string>
    <string name="medium_score_at_the_end">You did pretty well. You deserve Mercedes!</string>
    <string name="low_score_at_the_end">Could be better. But we found something just for you. It is Fiat Panda!</string>
    <string name="main_menu_button">Home</string>
    <string name="first_definitions_question">1. Downsizing is&#8230;</string>
    <string name="first_definitions_answer1">Reducing risk of accident</string>
    <string name="first_definitions_answer2">Reducing size of car</string>
    <string name="first_definitions_answer3">Reducing capacity and adding power with boosting device</string>
    <string name="first_definitions_answer4">Reducing weight of car</string>
    <string name="second_definitions_question">2. When oversteer occurs?</string>
    <string name="second_definitions_answer1">When front wheels lose grip</string>
    <string name="second_definitions_answer2">When rear wheels lose grip</string>
    <string name="second_definitions_answer3">When all wheels lose grip</string>
    <string name="second_definitions_answer4">When power-assisted steering is not working</string>
    <string name="third_definitions_question">3. What is ABS?</string>
    <string name="third_definitions_answer1">Active braking system</string>
    <string name="third_definitions_answer2">An anti-lock braking system</string>
    <string name="third_definitions_answer3">Autonomous braking system</string>
    <string name="third_definitions_answer4">Emergency braking system</string>
    <string name="fourth_definitions_question">4. What is Torsen?</string>
    <string name="fourth_definitions_answer1">Limited-slip differential</string>
    <string name="fourth_definitions_answer2">Racing series</string>
    <string name="fourth_definitions_answer3">Rally series</string>
    <string name="fourth_definitions_answer4">Type of hybrid car</string>
    <string name="fifth_definitions_question">5. What TCS/ASR does?</string>
    <string name="fifth_definitions_answer1">Warns driver about threat</string>
    <string name="fifth_definitions_answer2">Detects and minimize the loss of steering control</string>
    <string name="fifth_definitions_answer3">Prevents loss of traction</string>
    <string name="fifth_definitions_answer4">Temporarily boosts engine\'s power</string>
    <string name="sixth_definitions_question">6. What AWD stands for?</string>
    <string name="sixth_definitions_answer1" translatable="false">Alternative Wheel Drive</string>
    <string name="sixth_definitions_answer2" translatable="false">Automated Work Distributor</string>
    <string name="sixth_definitions_answer3" translatable="false">Advanced Wheel Drive</string>
    <string name="sixth_definitions_answer4" translatable="false">All Wheel Drive</string>
    <string name="seventh_definitions_question">7. What ESP/ESC does?</string>
    <string name="seventh_definitions_answer1">Prevents loss of traction</string>
    <string name="seventh_definitions_answer2">Warns driver about threat</string>
    <string name="seventh_definitions_answer3">Detects and minimize the loss of steering control</string>
    <string name="seventh_definitions_answer4">Temporarily boosts engine\'s power</string>
    <string name="eighth_definitions_question">8. What is Isofix?</string>
    <string name="eighth_definitions_answer1">Toolkit to fix a car</string>
    <string name="eighth_definitions_answer2">Soundproofing isolation system</string>
    <string name="eighth_definitions_answer3">System update which fixes bugs</string>
    <string name="eighth_definitions_answer4">Attachment points for child safety seats</string>
    <string name="ninth_definitions_question">9. What MT stands for?</string>
    <string name="ninth_definitions_answer1" translatable="false">Manual Transmission</string>
    <string name="ninth_definitions_answer2" translatable="false">Manufacturing Technology</string>
    <string name="ninth_definitions_answer3" translatable="false">Maximum Torque</string>
    <string name="ninth_definitions_answer4" translatable="false">Medium Tank (level)</string>
    <string name="tenth_definitions_question">10. What DPF stands for?</string>
    <string name="tenth_definitions_answer1" translatable="false">Diesel particulate filter</string>
    <string name="tenth_definitions_answer2" translatable="false">Diesel Powered Fuel</string>
    <string name="tenth_definitions_answer3" translatable="false">Differential Pressure Feedback</string>
    <string name="tenth_definitions_answer4" translatable="false">Diesel Powered Ford</string>
    <string name="models">Car Models</string>
    <string name="origins">Origins</string>
    <string name="recognize_car">Recognize car</string>
    <string name="submit">Submit</string>
    <string name="write_answer_hint">Write your answer here</string>
    <string name="first_recognize_question">1. This is BMW 3 series. But what is the 3-characters code for this type of body (Convertible)?</string>
    <string name="back_button">Back</string>
</resources>