<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        android:orientation="vertical"
        tools:context="com.example.android.thequizzworld.RulesActivity">

        <Button
            android:id="@+id/buttonLimitedTime"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="15dp"
            android:background="@color/buttonColor"
            android:drawableEnd="@drawable/arrow"
            android:drawableLeft="@drawable/time"
            android:drawableRight="@drawable/arrow"
            android:drawableStart="@drawable/time"
            android:gravity="center"
            android:paddingEnd="30dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingStart="30dp"
            android:text="@string/limited_time_button"
            android:textColor="@color/textButtonColor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:text="@string/limited_time_explanation"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonBasic"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="15dp"
            android:background="@color/buttonColor"
            android:drawableEnd="@drawable/arrow"
            android:drawableLeft="@drawable/standard"
            android:drawableRight="@drawable/arrow"
            android:drawableStart="@drawable/standard"
            android:gravity="center"
            android:paddingEnd="30dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingStart="30dp"
            android:text="@string/basic_button"
            android:textColor="@color/textButtonColor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:text="@string/standard_explanation"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>

