<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_choose_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="com.example.android.thequizzworld.StandardActivity">

        <Button
            android:id="@+id/buttonModels"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            android:background="@color/buttonColor"
            android:drawableEnd="@drawable/arrow"
            android:drawableLeft="@drawable/car"
            android:drawableRight="@drawable/arrow"
            android:drawableStart="@drawable/car"
            android:gravity="center"
            android:paddingEnd="30dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingStart="30dp"
            android:text="@string/models"
            android:textColor="@color/textButtonColor"
            android:textSize="30sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/buttonOrigins"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            android:background="@color/buttonColor"
            android:drawableEnd="@drawable/arrow"
            android:drawableLeft="@drawable/origins"
            android:drawableRight="@drawable/arrow"
            android:drawableStart="@drawable/origins"
            android:gravity="center"
            android:paddingEnd="30dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingStart="30dp"
            android:text="@string/origins"
            android:textColor="@color/textButtonColor"
            android:textSize="30sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/buttonRecognizeCar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/buttonColor"
            android:drawableEnd="@drawable/arrow"
            android:drawableLeft="@drawable/recognize"
            android:drawableRight="@drawable/arrow"
            android:drawableStart="@drawable/recognize"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:paddingEnd="30dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingStart="30dp"
            android:text="@string/recognize_car"
            android:textColor="@color/textButtonColor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/button_back"
            android:drawableStart="@drawable/button_back"
            android:gravity="center"
            android:paddingEnd="40dp"
            android:paddingLeft="30dp"
            android:paddingRight="40dp"
            android:paddingStart="30dp"
            android:text="@string/back_button"
            android:textColor="@color/textButtonColor"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>